// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/docker build retries 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build throws 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build uses cache (dry-run) 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--build-arg=IMAGE=slim",
      "--tag=renovate/base:latest",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-from=renovate/docker-build-cache:base-dummy",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build uses cache 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--tag=ghcr.io/renovatebot/base:latest",
      "--cache-from=ghcr.io/renovatebot/docker-build-cache:base-latest",
      "--cache-to=type=registry,ref=ghcr.io/renovatebot/docker-build-cache:base-latest,mode=max,ignore-error=true",
      "--cache-to=type=registry,ref=ghcr.io/renovatebot/docker-build-cache:base-dummy,mode=max,ignore-error=true",
      "--push",
      "--provenance=false",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build works 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--platform=linux/arm64",
      "--tag=renovate/base:latest",
      "--tag=renovate/base:5",
      "--push",
      "--provenance=false",
      ".",
    ],
  ],
]
`;
